[package]
name = "puid"
version = "0.1.1"
edition = "2024"
description = "A library for generating and parsing PUIDs (Prefixed Unique Identifiers)."
license = "MIT"
repository = "https://github.com/mrvillage/puid"

[dependencies]
base62 = "2.2.1"
rand = "0.9.1"
serde = { version = "1.0.219", optional = true }
sqlx = { version = "0.8.6", optional = true, features = ["postgres"] }
thiserror = "2.0.12"
puid_macros = { path = "macros", version = "0.1.1" }
sea-query = { version = "0.32.6", optional = true }

[dev-dependencies]
serde_json = "1.0.140"
serde = "1.0.219"
tokio = { version = "1.44", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }

[features]
default = []
serde = ["dep:serde", "puid_macros/serde"]
postgres = ["dep:sqlx", "puid_macros/postgres"]
sea-query = ["dep:sea-query", "puid_macros/sea-query"]

[workspace]
members = ["macros"]
