[package]
name = "puid_macros"
version = "0.1.0"
edition = "2024"
description = "A library for generating and parsing PUIDs (Prefixed Unique Identifiers)."
license = "MIT"
repository = "https://github.com/mrvillage/puid"

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"

[lib]
proc-macro = true

[features]
default = []
serde = []
postgres = []
